--- a/.gitignore
+++ b/.gitignore
@@ -12132,4 +12132,5 @@ env/Lib/site-packages/urllib3-2.0.5.dist-info/METADATA
 env/Lib/site-packages/urllib3-2.0.5.dist-info/RECORD
 env/Lib/site-packages/urllib3-2.0.5.dist-info/WHEEL
 env/Lib/site-packages/urllib3-2.0.5.dist-info/licenses/LICENSE.txt
+.gitignore
 virtual_employee/__pycache__/file_maker_bot.cpython-310.pyc
